Fix illegal reflective access warnings with Retrofit https://github.com/square/retrofit/issues/3341