@@ -47,7 +47,9 @@ shadowJar {
         attributes(
                 'Implementation-Title': 'Diabot - a diabetes Discord bot',
                 'Implementation-Version': this.version,
-                'Main-Class': 'com.dongtronic.diabot.Main'
+                'Main-Class': 'com.dongtronic.diabot.Main',
+                // fixes retrofit v2.8 reflection warnings
+                'Add-Opens': 'java.base/java.lang.invoke'
         )
     }
 }
